[package]
name = "bitcoin-statistics"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
config = { version = "0.13.2", default-features = false, features = ["toml"] }
bitcoincore-rpc = "0.15.0"
bitcoincore-rpc-json = "0.15.0"
thiserror = "1.0.32"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
clap = { version = "3.2.16", features = ["derive"] }
indicatif = "0.17.0"
tabled = "0.8.0"
rand = "0.8.5"
zeroize = { version = "1.5.7", features = ["std", "zeroize_derive"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
